crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__beamed_rhythm_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 800.0,
    "height": 12.3
  },
  "header": [
    {
      "kind": "text",
      "x": 2.0,
      "y": 2.0,
      "content": "Open G",
      "role": "tuningName",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 3.0,
      "content": "①=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 4.0,
      "content": "②=B",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 3.0,
      "content": "③=G",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 4.0,
      "content": "④=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 7.6,
      "y": 3.0,
      "content": "⑤=g",
      "role": "tuningString",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 5.5,
        "w": 800.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 275.36874,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 276.56876,
          "y1": 5.5,
          "x2": 331.4078,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 332.60782,
          "y1": 5.5,
          "x2": 387.4469,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 388.6469,
          "y1": 5.5,
          "x2": 686.3219,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 687.52185,
          "y1": 5.5,
          "x2": 799.0,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 6.5,
          "x2": 213.10312,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 214.30313,
          "y1": 6.5,
          "x2": 443.48596,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 444.68597,
          "y1": 6.5,
          "x2": 624.0563,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 625.2562,
          "y1": 6.5,
          "x2": 799.0,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.5,
          "x2": 150.8375,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 152.0375,
          "y1": 7.5,
          "x2": 499.525,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 500.725,
          "y1": 7.5,
          "x2": 799.0,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.5,
          "x2": 799.0,
          "y2": 8.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 9.5,
          "x2": 799.0,
          "y2": 9.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 2.0,
          "y2": 9.5,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 799.0,
          "y1": 5.5,
          "x2": 799.0,
          "y2": 9.5,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 5.5,
            "w": 797.0,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 7.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 8.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 151.4375,
              "y": 7.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 151.4375,
              "y1": 8.3,
              "x2": 151.4375,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 151.4375,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 213.70312,
              "y": 6.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "line",
              "x1": 213.70312,
              "y1": 7.3,
              "x2": 213.70312,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 213.70312,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "text",
              "x": 275.96875,
              "y": 5.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 275.96875,
              "y1": 6.3,
              "x2": 275.96875,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 275.96875,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "text",
              "x": 332.0078,
              "y": 5.5,
              "content": "2",
              "role": "fretNumber",
              "span": {
                "start": 12,
                "end": 15
              }
            },
            {
              "kind": "line",
              "x1": 332.0078,
              "y1": 6.3,
              "x2": 332.0078,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 332.0078,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 12,
                "end": 15
              }
            },
            {
              "kind": "text",
              "x": 388.0469,
              "y": 5.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 16,
                "end": 19
              }
            },
            {
              "kind": "line",
              "x1": 388.0469,
              "y1": 6.3,
              "x2": 388.0469,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 388.0469,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 16,
                "end": 19
              }
            },
            {
              "kind": "text",
              "x": 444.08597,
              "y": 6.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 20,
                "end": 23
              }
            },
            {
              "kind": "line",
              "x1": 444.08597,
              "y1": 7.3,
              "x2": 444.08597,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 444.08597,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 20,
                "end": 23
              }
            },
            {
              "kind": "text",
              "x": 500.125,
              "y": 7.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 24,
                "end": 27
              }
            },
            {
              "kind": "line",
              "x1": 500.125,
              "y1": 8.3,
              "x2": 500.125,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 500.125,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 24,
                "end": 27
              }
            },
            {
              "kind": "text",
              "x": 624.65625,
              "y": 6.5,
              "content": "1",
              "role": "fretNumber",
              "span": {
                "start": 28,
                "end": 31
              }
            },
            {
              "kind": "line",
              "x1": 624.65625,
              "y1": 7.3,
              "x2": 624.65625,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 624.65625,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 28,
                "end": 31
              }
            },
            {
              "kind": "text",
              "x": 686.9219,
              "y": 5.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 32,
                "end": 35
              }
            },
            {
              "kind": "line",
              "x1": 686.9219,
              "y1": 6.3,
              "x2": 686.9219,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 686.9219,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 32,
                "end": 35
              }
            },
            {
              "kind": "line",
              "x1": 151.3975,
              "y1": 11.09,
              "x2": 213.74312,
              "y2": 11.09,
              "weight": 0.18
            },
            {
              "kind": "line",
              "x1": 275.92874,
              "y1": 11.09,
              "x2": 444.12598,
              "y2": 11.09,
              "weight": 0.18
            },
            {
              "kind": "line",
              "x1": 275.92874,
              "y1": 10.74,
              "x2": 444.12598,
              "y2": 10.74,
              "weight": 0.18
            },
            {
              "kind": "line",
              "x1": 624.6163,
              "y1": 11.09,
              "x2": 686.96185,
              "y2": 11.09,
              "weight": 0.18
            }
          ],
          "span": {
            "start": 0,
            "end": 35
          }
        }
      ]
    }
  ]
}
