crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__dotted_rhythm_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 11.0,
    "height": 9.3
  },
  "header": [
    {
      "kind": "text",
      "x": 5.5,
      "y": 1.0,
      "content": "banjo · gDGBD",
      "role": "details",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 2.5,
        "w": 11.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 2.5,
          "x2": 9.200001,
          "y2": 2.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 3.5,
          "x2": 6.8,
          "y2": 3.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 8.0,
          "y1": 3.5,
          "x2": 9.200001,
          "y2": 3.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 4.5,
          "x2": 3.8000002,
          "y2": 4.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 5.0,
          "y1": 4.5,
          "x2": 9.200001,
          "y2": 4.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 9.200001,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 6.5,
          "x2": 9.200001,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 2.5,
          "x2": 2.0,
          "y2": 6.5,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 9.200001,
          "y1": 2.5,
          "x2": 9.200001,
          "y2": 6.5,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 2.5,
            "w": 7.2000003,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 4.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 5.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 4.4,
              "y": 4.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "path",
              "cmds": "M 4.73 4.5 a 0.12 0.12 0 1 0 0.24 0 a 0.12 0.12 0 1 0 -0.24 0 z",
              "span": null
            },
            {
              "kind": "line",
              "x1": 4.4,
              "y1": 5.3,
              "x2": 4.4,
              "y2": 8.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 4.4,
              "y": 8.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 7.4,
              "y": 3.5,
              "content": "1",
              "role": "fretNumber",
              "span": {
                "start": 6,
                "end": 9
              }
            },
            {
              "kind": "line",
              "x1": 7.4,
              "y1": 4.3,
              "x2": 7.4,
              "y2": 8.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 7.4,
              "y": 8.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 6,
                "end": 9
              }
            },
            {
              "kind": "line",
              "x1": 7.4,
              "y1": 8.09,
              "x2": 8.0,
              "y2": 8.09,
              "weight": 0.18
            }
          ],
          "span": {
            "start": 0,
            "end": 9
          }
        }
      ]
    }
  ]
}
