crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__flagged_notes_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 800.0,
    "height": 13.8
  },
  "header": [
    {
      "kind": "text",
      "x": 2.0,
      "y": 2.25,
      "content": "Open G",
      "role": "tuningName",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 3.75,
      "content": "①=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 5.25,
      "content": "②=B",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 5.4,
      "y": 3.75,
      "content": "③=G",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 5.4,
      "y": 5.25,
      "content": "④=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 8.8,
      "y": 3.75,
      "content": "⑤=g",
      "role": "tuningString",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 7.0,
        "w": 800.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.0,
          "x2": 607.56903,
          "y2": 7.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 608.769,
          "y1": 7.0,
          "x2": 799.0,
          "y2": 7.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.0,
          "x2": 270.80844,
          "y2": 8.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 272.00845,
          "y1": 8.0,
          "x2": 799.0,
          "y2": 8.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 9.0,
          "x2": 383.06195,
          "y2": 9.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 384.26196,
          "y1": 9.0,
          "x2": 799.0,
          "y2": 9.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 10.0,
          "x2": 799.0,
          "y2": 10.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 11.0,
          "x2": 799.0,
          "y2": 11.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.0,
          "x2": 2.0,
          "y2": 11.0,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 799.0,
          "y1": 7.0,
          "x2": 799.0,
          "y2": 11.0,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 7.0,
            "w": 797.0,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 8.5,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 9.5,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 271.40845,
              "y": 8.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 271.40845,
              "y1": 8.8,
              "x2": 271.40845,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 271.40845,
              "y": 13.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 383.66196,
              "y": 9.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "line",
              "x1": 383.66196,
              "y1": 9.8,
              "x2": 383.66196,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 383.66196,
              "y": 13.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "text",
              "x": 608.169,
              "y": 7.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 608.169,
              "y1": 7.8,
              "x2": 608.169,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 608.169,
              "y": 13.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 271.40845,
              "y1": 12.59,
              "x2": 272.00845,
              "y2": 12.59,
              "weight": 0.18
            },
            {
              "kind": "line",
              "x1": 608.169,
              "y1": 12.59,
              "x2": 608.769,
              "y2": 12.59,
              "weight": 0.18
            },
            {
              "kind": "line",
              "x1": 608.169,
              "y1": 12.24,
              "x2": 608.769,
              "y2": 12.24,
              "weight": 0.18
            }
          ],
          "span": {
            "start": 0,
            "end": 11
          }
        }
      ]
    }
  ]
}
