crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__marks_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 800.0,
    "height": 13.8
  },
  "header": [
    {
      "kind": "text",
      "x": 2.0,
      "y": 2.25,
      "content": "Open G",
      "role": "tuningName",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 3.75,
      "content": "①=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 5.25,
      "content": "②=B",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 5.4,
      "y": 3.75,
      "content": "③=G",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 5.4,
      "y": 5.25,
      "content": "④=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 8.8,
      "y": 3.75,
      "content": "⑤=g",
      "role": "tuningString",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 7.0,
        "w": 800.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.0,
          "x2": 456.82855,
          "y2": 7.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 458.02856,
          "y1": 7.0,
          "x2": 799.0,
          "y2": 7.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.0,
          "x2": 314.50714,
          "y2": 8.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 315.70715,
          "y1": 8.0,
          "x2": 599.14996,
          "y2": 8.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 600.3499,
          "y1": 8.0,
          "x2": 799.0,
          "y2": 8.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 9.0,
          "x2": 172.18571,
          "y2": 9.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 173.38573,
          "y1": 9.0,
          "x2": 799.0,
          "y2": 9.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 10.0,
          "x2": 799.0,
          "y2": 10.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 11.0,
          "x2": 799.0,
          "y2": 11.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.0,
          "x2": 2.0,
          "y2": 11.0,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 799.0,
          "y1": 7.0,
          "x2": 799.0,
          "y2": 11.0,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 7.0,
            "w": 797.0,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 8.5,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 9.5,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 172.78572,
              "y": 9.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 172.78572,
              "y1": 9.8,
              "x2": 172.78572,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 172.78572,
              "y": 13.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 315.10715,
              "y": 8.0,
              "content": "2",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 315.10715,
              "y1": 8.8,
              "x2": 315.10715,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 315.50714,
              "y": 7.55,
              "content": "h",
              "role": "technique",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 457.42856,
              "y": 7.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 457.42856,
              "y1": 7.8,
              "x2": 457.42856,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "path",
              "cmds": "M 457.42856 7 Q 528.58923 6.2 599.74994 7",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 599.74994,
              "y": 8.0,
              "content": "1",
              "role": "fretNumber",
              "span": {
                "start": 20,
                "end": 27
              }
            },
            {
              "kind": "line",
              "x1": 599.74994,
              "y1": 8.8,
              "x2": 599.74994,
              "y2": 12.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 599.74994,
              "y": 13.1,
              "content": "↓",
              "role": "strum",
              "span": {
                "start": 20,
                "end": 27
              }
            }
          ],
          "span": {
            "start": 0,
            "end": 27
          }
        }
      ]
    }
  ]
}
